Avance cambios generales.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="assets/bootstrap/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/root.css">
+    <link rel="stylesheet" href="css/estilosPersonalizados.css">
+    <link rel="stylesheet" href="css/otrosEstilos.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -35,7 +38,7 @@
 </head>
 <body>
     <header class="site-header inicio">
-        <div class="contenedor contenido-header">
+        <div class="contenedor contenido-header d-none">
             <div class="barra">
                 <a href="/">
                     <img src="img/alb_logo.svg" alt="Logotipo de Bienes Raices">
@@ -53,6 +56,108 @@
                 </nav>
             </div>
             <h1>Diseño y construcción de albercas</h1>
+        </div>
+        <!-- Slider -->
+        <div 
+        id="carouselServicios" 
+        class="carousel slide" 
+        >
+            <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 position-absolute box-shadow-principal">
+                <div class="container-fluid">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="img/logo/logo_albercas_del_mar.png" alt="ALBERCAS DEL MAR LOGO">
+                        </a>
+                    </div>
+                    <h1 
+                    class="ml-5px texto-logo text-uppercase w-auto fw-800 b-b-3px-c-secundario">
+                        Diseño y construcción de albercas
+                    </h1>
+                    <button 
+                    class="navbar-toggler" 
+                    type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" 
+                    aria-expanded="false" 
+                    aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end" id="navbarNavAltMarkup">
+                        <div id="navegacion-principal" class="navbar-nav text-uppercase">
+                            <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
+                            <a class="nav-link p-3" href="servicios.html">Servicios</a>
+                            <a class="nav-link p-3" href="galeria.html">Galería</a>
+                            <a class="nav-link p-3" href="contacto.html">Contacto</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="carousel-indicators">
+                <button 
+                class="active btnSliderCambioImagen"
+                type="button" 
+                data-bs-target="#carouselServicios" 
+                data-bs-slide-to="0" 
+                aria-current="true" 
+                aria-label="Imagen 1"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/alberca_dos.jpg" 
+                    class="d-block w-100">
+                    <div class="carousel-caption">
+                        <div class="p-r">
+                            <h1 class="text-white titulo-principal">ALBERCAS</h1>
+                            <h1 class="text-white mb-5 titulo-principal">DEL MAR</h1>
+                            <h3 class="text-uppercase text-center titulo-principal b-b-3px-red w-auto text-white mb-5">DISEÑO Y CONSTRUCCIÓN DE ALBERCAS</h3>
+                        </div>
+                        <div class="container mt-5 d-none">
+                            <div class="row text-center mb-5 titulo-principal servicios-titulo text-white servicio-construccion">
+                                <p class="text-uppercase">
+                                    <span class="bineta"></span>
+                                    Diseño, Construcción y Mantenimiento de Vías Terrestres, Marítimas y Ferroviarias
+                                </p>
+                                <p class="text-uppercase">
+                                    <span class="bineta"></span>
+                                    Pavimentación, Asfalto y Revestimiento
+                                </p>
+                                <p class="text-uppercase">
+                                    <span class="bineta"></span>
+                                    Obras de Infraestructura Industrial, Urbana y Residencial 
+                                </p>
+                                <p class="text-uppercase">
+                                    <span class="bineta"></span>
+                                    Construcción de Protecciones Costeras
+                                </p>
+                            </div>
+                        </div>
+                        <div class="subInformacion p-5">
+                            <button
+                            class="btn btn-success fondo-color-secundario">
+                                CONTACTANOS
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button 
+            class="carousel-control-prev" 
+            type="button" 
+            data-bs-target="#carouselServicios" 
+            data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button 
+            class="carousel-control-next" 
+            type="button" 
+            data-bs-target="#carouselServicios"
+            data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </header>
     <section class="contenedor seccion">
