--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Albercas del mar</title>
-    <link rel="icon" type="image/png" href="../img/icono_title.png">
+    <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -37,7 +37,7 @@
     </script>
 </head>
 <body>
-    <header class="site-header inicio">
+    <header class="site-header inicio pt-0">
         <div class="contenedor contenido-header d-none">
             <div class="barra">
                 <a href="/">
