--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
     </section>
     <section class="container">
         <div class="row">
-            <section class="contenedor seccion">
-                <h2 class="fw-300 centrar-texto">Contáctanos</h2>
+            <section class="contenedor seccion seccion-contacto">
+                <h3 class="fw-bold text-center text-uppercase">Contáctanos</h3>
                 <p class="fw-bold color-t-principal">Dirección:</p>
                 <p>Nicolás Bravo 341, Centro, Cd. Lázaro Cárdenas, Mich., MX 60950</p>
                 <p class="fw-bold color-t-principal">Teléfonos:</p>
