--- a/index.html
+++ b/index.html
@@ -331,7 +331,9 @@
         <div class="container">
             <div class="row mb-3">
                 <div class="col-12">
-					<h2 class="tituloEquipoTrabajo text-white b-b-3px-white mb-4">Únete a nuestro equipo de trabajo</h2>
+					<h2 class="tituloEquipoTrabajo text-white b-b-3px-white my-4 text-center text-uppercase">
+                        Únete a nuestro equipo de trabajo
+                    </h2>
                     <div class="row">
                         <ul class="mb-0">
                             <li class="list-group-item active tituloVacantes" aria-current="true">
@@ -547,27 +549,26 @@
             </div>
             <div class="row contenidoFooter justify-content-center justify-content-md-between">
                 <div class="footer-informacion col-12 col-lg-6 col-xl-3 row d-block mb-md-4 mb-lg-0">
-                    <h3 class="text-center">Sobre <span>Constructora Rio Mar</span></h3>
+                    <h4 class="text-center text-uppercase">Sobre <span>Albercas del Mar</span></h4>
                     <hr class="w-auto">
-                    <h3 class="b-b-3px-c-secundario mb-0">Dirección:</h3>
+                    <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Dirección:</h4>
                     <p style="text-align: justify;">
                         <br>
                         Nicolas Bravo 341, Centro, <br> Cd. Lázaro Cárdenas, Mich, MX.
                     </p>
-                    <h3 class="b-b-3px-c-secundario mb-0">Horarios de atención:</h3>
+                    <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Horarios de atención:</h4>
                     <p style="text-align: justify;">
                         <br>
                         <div class="d-flex align-items-center p-0">
                             <i class="fa fa-check"></i>
                             <span class="d-block">Lu. a Vi. de 07:00 am a 08:00 pm</span>
                         </div>
-                        <br>
                         <div class="d-flex align-items-center p-0">
                             <i class="fa fa-check"></i>
                             <span class="d-block">Sábados de 07:00 am a 02:00 pm</span>
                         </div>
                     </p>
-                    <h3 class="b-b-3px-c-secundario mb-0">Teléfonos:</h3>
+                    <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Teléfonos:</h4>
                     <ul class="p-2 links">
                         <li>
                             <a href="tel:+52 (753) 537 1349">
@@ -588,10 +589,10 @@
                     </ul>               
                 </div>
                 <div class="ultimos-tweets col-12 col-lg-6 col-xl-3 row d-block mb-md-4 mb-lg-0">
-                    <h3 class="text-center">
+                    <h4 class="text-center text-uppercase">
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
-                    </h3>
+                    </h4>
                     <div 
                     class="fb-page" 
                     data-href="https://www.facebook.com/Icamar.Mexico"
@@ -606,36 +607,36 @@
                             <a href="https://www.facebook.com/Icamar.Mexico/">ICAMAR</a>
                         </blockquote>
                     </div>
-                    <h3 class="text-center">
+                    <h4 class="text-center text-uppercase">
                         Redes <span>sociales:</span>
                         <hr class="w-auto">
-                    </h3>
+                    </h4>
                     <nav class="redes-sociales text-center mb-4">
                         <a 
                         target="_blanck" 
                         href="https://www.facebook.com/Icamar.Mexico/">
                             <i
-                            class="fab fa-facebook" 
+                            class="fa fa-facebook" 
                             aria-hidden="true"></i>
                         </a>
                         <a 
                         target="_blanck" 
                         href="https://twitter.com/icamar-constructora">
                             <i
-                            class="fab fa-twitter" 
+                            class="fa fa-twitter" 
                             aria-hidden="true"></i>
                         </a>
                         <a 
                         target="_blanck"
                         href="https://api.whatsapp.com/send?phone=7531683407&amp;text=Hola!&nbsp;me&nbsp;pueden&nbsp;apoyar?">
                             <i
-                            class="fab fa-whatsapp" 
+                            class="fa fa-whatsapp" 
                             aria-hidden="true"></i>
                         </a>
                         <a 
                         target="_blank" href="#">
                             <i 
-                            class="fab fa-instagram"
+                            class="fa fa-instagram"
                             aria-hidden="true"></i>
                         </a>
                         <a 
@@ -648,85 +649,87 @@
                     </nav>
                 </div>
                 <div class="menu col-12 col-lg-6 col-xl-3 row d-block">
-                    <h3 class="text-center">Divisiones de <span>empresas</span>:</h3>
+                    <h4 class="text-center text-uppercase">Divisiones de <span>empresas</span>:</h4>
                     <ul class="links paginasWeb">
                         <li>
                             Construriomar:<br>
                             <a target="_blank" href="https://construriomar.com">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.construriomar.com
                             </a>
                         </li>
                         <li>
                             HL Construcciones:<br>
                             <a target="_blank" href="https://hlconstrucciones.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.hlconstrucciones.com
                             </a>
                         </li>
                         <li>
                             Ingeniería Construmex:<br>
                             <a target="_blank" href="https://ingenieriaconstrumex.com">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.ingenieriaconstrumex.com
                             </a>
                         </li>
                     </ul>
-                    <h3 class="text-center">Gremio de <span>empresas</span>:</h3>
+                    <h4 class="text-center text-uppercase">
+                        Gremio de <span>empresas</span>:
+                    </h4>
                     <ul class="links paginasWeb">
                         <li>
                             Mi Casa Proyectos:<br>
                             <a target="_blank" href="https://micasaproyectos.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.micasaproyectos.com
                             </a>
                         </li>
                         <li>
                             Mantenimiento Mi Casa:<br>
                             <a target="_blank" href="https://mantenimientomicasa.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.mantenimientomicasa.com
                             </a>
                         </li>
                         <li>
                             Albercas Del Mar:<br>
                             <a target="_blank" href="https://albercasdelmar.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.albercasdelmar.com
                             </a>
                         </li>
                         <li>
                             Pozos Rio Mar:<br>
                             <a target="_blank" href="https://pozosriomar.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.pozosriomar.com
                             </a>
                         </li>
                         <li>
                             Geo Rio Mar:<br>
                             <a target="_blank" href="https://georiomar.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.georiomar.com
                             </a>
                         </li>
                         <li>
                             Rio Mar Paisajismo:<br>
                             <a target="_blank" href="https://riomarpaisajismo.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.riomarpaisajismo.com
                             </a>
                         </li>
                         <li>
                             Andamios HL:<br>
                             <a target="_blank" href="https://andamioshl.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.andamioshl.com
                             </a>
                         </li>
                         <li>
                             Contenedores Del Mar:<br>
                             <a target="_blank" href="https://contenedoresdelmar.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.contenedoresdelmar.com
                             </a>
                         </li>
@@ -737,56 +740,56 @@
                         <li>
                             Ingeniería Eléctrica HL:<br>
                             <a target="_blank" href="https://ingenieriaelectricahl.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.ingenieriaelectricahl.com
                             </a>
                         </li>
                         <li>
                             Plafón Mexy:<br>
                             <a target="_blank" href="https://plafonmexy.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.plafonmexy.com
                             </a>
                         </li>
                         <li>
                             Palapas Río Mar:<br>
                             <a target="_blank" href="https://palapasriomar.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.palapasriomar.com
                             </a>
                         </li>
                         <li>
                             Lumina, Energias Renovables:<br>
                             <a target="_blank" href="https://luminasolarmex.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.luminasolarmex.com
                             </a>
                         </li>
                         <li>
                             Frio Polar HL:<br>
                             <a target="_blank" href="https://friopolarhl.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.friopolarhl.com
                             </a>
                         </li>
                         <li>
                             Inmobiliaria Rio Mar:<br>
                             <a target="_blank" href="https://inmobiliariariomar.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.inmobiliariariomar.com
                             </a>
                         </li>
                         <li>
                             Camaras Vigilancia HL:<br>
                             <a target="_blank" href="https://camarasvigilanciahl.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.camarasvigilanciahl.com
                             </a>
                         </li>
                         <li>
                             Master Limpio:<br>
                             <a target="_blank" href="https://masterlimpio.com/">
-                                <i class="fas fa-globe"></i>
+                                <i class="fa fa-globe"></i>
                                 www.masterlimpio.com
                             </a>
                         </li>
